# trading-platform

./: .env.example  .gitattributes  .gitignore  .mcp.json  .replit  .replitignore  .unit05-final-adversarial-review.md  .unit05-final-correctness-review.md  .unit05-red-api-worker.md  .unit05-red-migration-worker.md  .unit07-final-adversarial-review.md  .unit07-final-correctness-review.md  .unit07-final2-adversarial-review.md  .unit07-final2-correctness-review.md  .unit07-final3-adversarial-review.md  .unit07-final3-correctness-review.md  .unit07-red-data-worker.md  .unit07-red-worker.md  .unit07-review-a.md  .unit07-review-b.md  .unit07-second-red-review.md  .unit08-final-adversarial-review.md  .unit08-final-correctness-review.md  .unit08-production-review.md  .unit08-red-review.md  .unit08-tests-data-review.md  .unit09-index-review.md  .unit09-repair-plan.md  .unit09-support-review.md  5-27 trading analysis.md  5-28 trading analysis.md  ACCOUNT_DATA_AND_READINESS_PLAN_2026-06-11.md  ACCOUNT_POSITION_INSPECTOR_FIX.md  AGENTS.md  AGENT_COORDINATION_SOP.md  AGENT_HANDOFF_TO_SESSION2_compute-offload.md  ALGO_MONITOR_SIGNALS_TO_ACTIONS_PLAN.md  ALGO_RIGHT_RAIL_REDESIGN.md  APP_DEFICIENCY_REPORT_2026-05-26.md  APP_RESPONSIVENESS_AUDIT_2026-06-09.md  (+1219 more)
.agents/: agent-chat-server.mjs  agent-chat-server.test.mjs  agent_assets_metadata.toml
.codex-watch/: age-honesty-2026-07-07.md  algo-flicker-2026-07-07.md  breadth-fix-report-2026-07-07.md  breadth-investigation-2026-07-07.md  db-census-2026-07-07.md  elu-profile-2026-07-07.md  fix-observability-2026-07-07.md  fix-read-fanout-2026-07-07.md  (+139 more)
.codex-watch-live/: live-watch-summary.json
.codex-watch-live-auth/: auth-live-probe-summary.json
crates/market-data-worker/: Cargo.toml
crates/market-data-worker/src/: config.rs  db.rs  diagnostics.rs  ingest.rs  jobs.rs  main.rs  retention.rs
crates/market-data-worker/src/compute/: bars.rs  flow.rs  gex.rs  mod.rs
crates/market-data-worker/src/providers/: massive.rs  mod.rs  polygon.rs
python/ibkr_sidecar/: pyproject.toml
python/ibkr_sidecar/src/pyrus_ibkr_sidecar/: __init__.py  app.py  ib_async_adapter.py  models.py  registry.py  service.py
python/ibkr_sidecar/tests/: test_app.py  test_ib_async_adapter.py  test_registry.py
python/pyrus_compute/: README.md  pyproject.toml
python/pyrus_compute/src/pyrus_compute/: __init__.py  app.py  benchmark.py  black_scholes.py  doctor.py  jobs.py  models.py  service.py
python/pyrus_compute/tests/: test_app.py  test_jobs.py  test_portfolio_and_option_contracts.py  test_runtime_safety_contracts.py  test_signal_matrix_directional_features.py
python/pyrus_compute/tests/fixtures/: directional-features-parity.json  generate-directional-features-parity.mts  signal-matrix-pipeline-parity.json
(+3637 files in other folders)
