[project]
name = "pyrus-ibkr-sidecar"
version = "0.1.0"
description = "Experimental PYRUS IBKR market-data sidecar using ib_async."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "ib_async>=2.0,<3",
  "pydantic>=2.8,<3",
  "uvicorn[standard]>=0.30,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.2,<9",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyrus_ibkr_sidecar"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
