[project]
name = "pyrus-compute"
version = "0.1.0"
description = "Internal PYRUS Python compute service for batch math and research workloads."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "numpy>=2.0,<3",
  "orjson>=3.10,<4",
  "polars>=1.0,<2",
  "pyarrow>=16,<23",
  "pydantic>=2.8,<3",
  "scipy>=1.13,<2",
  "uvicorn[standard]>=0.30,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.10,<2",
  "pytest>=8.2,<9",
  "ruff>=0.5,<1",
]

[project.scripts]
pyrus-compute = "pyrus_compute.service:main"
pyrus-compute-doctor = "pyrus_compute.doctor:main"
pyrus-compute-benchmark = "pyrus_compute.benchmark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyrus_compute"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
